fixed more  missing color on IOS

--- a/css/game.css
+++ b/css/game.css
@@ -94,6 +94,7 @@
   width: 1.5em;
   font-size: 1.5rem;
   font-size: clamp(1.5rem, 1.4rem + 0.5vw, 2rem);
+  color: black;
 }
 .container a {
   text-decoration: none;
